--- a/index.html
+++ b/index.html
@@ -7,24 +7,24 @@
 </head>
 <body>
     <h1>MY RESUME</h1>
-    <img src="./assets/images/cat.png" height="100"/>
+    <img src="./assets/images/shiva.png" height="100"/>
     <hr />
-    <h2>Summary</h2>
+    <h2>Introduction:</h2>
     <p>"Hello, I'm Shiva, a passionate student at SIMATS School of Engineering. My academic journey is fueled by a deep interest in both web development and machine learning. In the realm of web development, I have honed my skills to create dynamic and user-friendly websites. Simultaneously, my fascination with machine learning drives me to explore innovative solutions and algorithms in this cutting-edge field. Join me on my journey as I blend creativity with technology to make a meaningful impact in both web development and machine learning."</p>
     <hr/>
     <h2>Education</h2>
     <ul>
         <li>SSLC : 78%</li>
         <li>Higher Secondary : 84%</li>
-        <li>Collage : 8.5(CGPC Till 2nd year)</li>
+        <li>College : 8.5(CGPC Till 2nd year)</li>
     </ul>
     <hr />
     <h2>SKILLS</h2>
     <ul>
         <li>C Language</li>
-        <li>c++ Language</li>
+        <li>Cpp Language</li>
         <li>Python Language</li>
-        <li>Web development</li>
+        <li>Web Development</li>
     </ul>
     <a href="./public/hobbies.html">Hobbies</a><br />
     <a href="./public/contact.html">Contact</a>
