--- a/public/contact.html
+++ b/public/contact.html
@@ -7,13 +7,13 @@
 </head>
 <body>
   <h1>Contact Me</h1>
-<p>Tel: 91+ 9488134499</p>
+<p>Tel: +91 9488134499</p>
 <p>Email: a.shivainfo@gmail.com</p>
 <p>Address:</p>
 <p>
-  2/130 Kavarkulam Therivilai<br />
+  2/130, Kavarkulam Therivilai<br />
   Santhaiyadi Post<br />
-  Kanyakumari<br />
+  Kanyakumari-629703<br />
 </p>
 </body>
 </html>
