--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul>
         <li>SSLC : 78%</li>
         <li>Higher Secondary : 84%</li>
-        <li>College : 8.5(CGPC Till 2nd year)</li>
+        <li>College : 8.5(CGPA Till 2nd year)</li>
     </ul>
     <hr />
     <h2>SKILLS</h2>
