--- a/index.html
+++ b/index.html
@@ -4,28 +4,64 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        h2{
+            color: rgb(211, 105, 105);
+        }
+    </style>
 </head>
 <body>
-    <h1>MY RESUME</h1>
+    <h1 style="color: rgb(211, 105, 105);
+    text-align: center;">MY RESUME</h1>
     <img src="./assets/images/shiva.png" height="100"/>
+    <a>SHIVA A, B.Tech Student, SIMATS School Of Engineering</a>
     <hr />
-    <h2>Introduction:</h2>
-    <p>"Hello, I'm Shiva, a passionate student at SIMATS School of Engineering. My academic journey is fueled by a deep interest in both web development and machine learning. In the realm of web development, I have honed my skills to create dynamic and user-friendly websites. Simultaneously, my fascination with machine learning drives me to explore innovative solutions and algorithms in this cutting-edge field. Join me on my journey as I blend creativity with technology to make a meaningful impact in both web development and machine learning."</p>
+    <h2>Profile:</h2>
+    <ul>
+        <li>Hard working student seeking employment. I'm Shiva, a passionate student at SIMATS School of Engineering. My academic journey is fueled by a deep interest in both web development and machine learning.
+        </li>
+        <li>In the realm of web development, I have honed my skills to create dynamic and user-friendly websites. Simultaneously, my fascination with machine learning drives me to explore innovative solutions and algorithms in this cutting-edge field. 
+        </li>
+        <li>Join me on my journey as I blend creativity with technology to make a meaningful impact in both web development and machine learning.</li>
+    </ul>
     <hr/>
     <h2>Education</h2>
     <ul>
         <li>SSLC : 78%</li>
         <li>Higher Secondary : 84%</li>
-        <li>College : 8.5(CGPA Till 2nd year)</li>
+        <li>College : 8.5(CGPC Till 2nd year)</li>
     </ul>
     <hr />
     <h2>SKILLS</h2>
     <ul>
         <li>C Language</li>
-        <li>Cpp Language</li>
+        <li>C++ Language</li>
         <li>Python Language</li>
         <li>Web Development</li>
     </ul>
+    <hr />
+    <h2>Courses Completed</h2>
+    <ul>
+        <li>Python for Developer</li>
+        <li>Data Science with Python</li>
+        <li>Artificial Intelligence with Python</li>
+        <li>Machine Learning with Python</li>
+    </ul>
+    <hr />
+    <h2>Internship Completed</h2>
+    <ul>
+        <li>Data Science</li>
+        <li>Artificial Intelligence</li>
+        <li>Machine Learning </li>
+    </ul>
+    <hr />
+    <h2>Workshops/Webinars attended</h2>
+    <ul>
+        <li>Code Quality and Codeless Automation from NPTEL</li>
+        <li>Design Thinking from NPTEL</li>
+        <li>Cloud Architecture from NPTEL</li>
+    </ul>
+    <hr />
     <a href="./public/hobbies.html">Hobbies</a><br />
     <a href="./public/contact.html">Contact</a>
 </body>
