--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
         h2{
             color: rgb(211, 105, 105);
         }
+        }
+        body{
+            background-color:bisque;
+        }
     </style>
 </head>
 <body>
