--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         }
         }
         body{
-            background-color:bisque;
+            background-color:rgb(204, 150, 84);
         }
     </style>
 </head>
